--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,11 +1,8 @@
 os_version:
   linux_64: cos7
-provider:
-  linux_aarch64: azure
-  linux_ppc64le: azure
 build_platform:
-  linux_aarch64: linux_aarch64
-  linux_ppc64le: linux_ppc64le
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
 github:
   branch_name: main
   tooling_branch_name: main
