skip windows again

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,10 @@ build:
   run_exports:
     # This is kinda annoying, the SO version is not related to the version
     - {{ pin_subpackage('shaderc', max_pin='x.x') }}
+  # hmaarrfk - 2023/07
+  # Windows seems to have trouble linking to certain libraries
+  # need to revisit this later
+  skip: true  # [win]
 
 requirements:
   build:
