--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,9 +30,10 @@ requirements:
     - make                                   # [unix]
     - sysroot_linux-64 2.17                  # [linux]
   host:
-    - spirv-tools
-    - spirv-headers
-    - glslang 13.0
+    - spirv-tools 2023.2
+    # Keep headers in sync with spirv-tools
+    - spirv-headers 1.3.243.0
+    - glslang
 
 test:
   commands:
