--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ requirements:
     # Keep headers in sync with spirv-tools
     - spirv-headers 1.3.243.0
     - glslang
+    - libcxx                                 # [osx]
 
 test:
   commands:
