--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,14 +25,17 @@ requirements:
     # If your project compiles code (such as a C extension) then add the required compilers as separate entries here.
     # Compilers are named 'c', 'cxx' and 'fortran'.
     - {{ compiler('c') }}
-    - {{ stdlib("c") }}
+    - {{ stdlib('c') }}
     - {{ compiler('cxx') }}
     - cmake
     - make                                   # [unix]
   host:
-    - spirv-tools 2023.2
+    - spirv-tools 2024.3
     # Keep headers in sync with spirv-tools
-    - spirv-headers 1.3.243.0
+    # https://github.com/conda-forge/spirv-tools-feedstock/blob/main/recipe/meta.yaml
+    # This may be come a run_constrained in the version after 2024.3
+    # https://github.com/conda-forge/spirv-tools-feedstock/pull/19
+    - spirv-headers 1.3.290.0
     - glslang
 
 test:
