--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,6 @@ source:
     - patches/0003-Update-thirdparty-dependency-resolution.patch
     - patches/0004-Update-dependenices-on-glslang.patch
     - patches/0005-Only-install-shared-libraries.patch
-    - patches/dont_do_enable_vulkan_1_4.patch
 
 build:
   number: 0
@@ -31,12 +30,8 @@ requirements:
     - cmake
     - make                                   # [unix]
   host:
-    - spirv-tools 2024.3
-    # Keep headers in sync with spirv-tools
-    # https://github.com/conda-forge/spirv-tools-feedstock/blob/main/recipe/meta.yaml
-    # This may be come a run_constrained in the version after 2024.3
-    # https://github.com/conda-forge/spirv-tools-feedstock/pull/19
-    - spirv-headers 1.3.290.0
+    - spirv-tools 2025.1
+    - spirv-headers
     - glslang
 
 test:
