--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,9 +30,8 @@ requirements:
     - cmake
     - make                                   # [unix]
   host:
-    - spirv-tools 2023.2
-    # Keep headers in sync with spirv-tools
-    - spirv-headers 1.3.243.0
+    - spirv-tools
+    - spirv-headers
     - glslang
 
 test:
